# EDA-Projects

cars_eda/: Cars_cleaned.csv  main.py  pyproject.toml
cars_eda/pages/: Data Intro.py  Pandas Analysis.py  Visualization.py
household_power_consumption_eda/: app.py  clean_and_analysis.ipynb  notes.txt  pyproject.toml
tutorial/: chapter-1.py  chapter-2.py  chapter-3.py  chapter-4.py  dashboard.py  pyproject.toml
