[project]
name = "household-power-consumption-eda"
version = "0.1.0"
description = "The main objective of this Exploratory Data Analysis (EDA) project is to examine household electricity usage patterns to derive meaningful insights, detect inefficiencies, and enhance energy management."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "streamlit-option-menu>=0.4.0",
]
